--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,20 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Browse Jobs</h1>
+<h1 class='px-3'>Browse Jobs</h1>
 
-<table>
+<h2 class='px-3'>ALL CATEGORIES</h2>
+<div class="grid gap-3 d-flex flex-row mb-3 px-3">
+  <% @categories.each do |category| %>
+    <%= link_to "#{category.name}", categories_path(category), class: "btn btn-outline-primary position-relative" %>
+  <% end %>
+</div>
+
+<table class='p-3'>
   <thead>
     <tr>
       <th colspan="3"></th>
     </tr>
   </thead>
-
-  <h2>ALL CATEGORIES</h2>
-  <div class="grid gap-3 d-flex flex-row mb-3">
-    <% @categories.each do |category| %>
-      <%= link_to "#{category.name}", categories_path(category), class: "btn btn-outline-primary position-relative" %>
-    <% end %>
-  </div>
 
   <tbody>
     <% @jobs.each do |job| %>
