--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <%= link_to "Sample", root_path, class: 'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,6 +17,18 @@
         </li>
         <li class="nav-item">
           <!-- <a class="nav-link disabled" aria-disabled="true">Disabled</a> -->
+        </li>
+      </ul>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <!-- <a class="nav-link" href="#">Pricing</a> -->
+        </li>
+        <li class="nav-item">
+          <% if user_signed_in? %>
+            <%= button_to "Sign out", destroy_user_session_path, method: :delete %>
+          <% else %>
+            <%= button_to "Sign in", new_user_session_path, class: "btn btn-light" %>
+          <% end %>
         </li>
       </ul>
     </div>
