--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -8,6 +8,7 @@
     <%= link_to "#{category.name}", categories_path(category), class: "btn btn-outline-primary position-relative" %>
   <% end %>
 </div>
+<%= javascript_pack_tag "react-components/CreateJob" %>
 
 <table class='p-3'>
   <thead>
@@ -29,5 +30,3 @@
 </table>
 
 <br>
-
-<%= link_to 'New Job', new_job_path %>
