--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <%= link_to "Sample", root_path, class: 'navbar-brand' %>
+    <%= link_to "Sample", root_path, class: 'navbar-brand', data: { turbolinks: false } %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <%= link_to "Search", search_jobs_path, class: 'nav-link active' %>
+          <%= link_to "Search", search_jobs_path, class: 'nav-link active', data: { turbo: false } %>
         </li>
         <li class="nav-item">
-          <%= link_to "Browse Jobs", jobs_path, class: 'nav-link' %>
+          <%= link_to "Jobs", jobs_path, class: 'nav-link', data: { turbolinks: false } %>
         </li>
         <li class="nav-item">
           <!-- <a class="nav-link" href="#">Pricing</a> -->
@@ -25,7 +25,12 @@
         </li>
         <li class="nav-item">
           <% if user_signed_in? %>
-            <%= button_to "Sign out", destroy_user_session_path, method: :delete %>
+            <%= link_to 'Post a Job', new_job_path, class: "btn btn-light" %>
+          <% end %>
+        </li>
+        <li class="nav-item">
+          <% if user_signed_in? %>
+            <%= button_to "Sign out", destroy_user_session_path, method: :delete, class: "btn btn-light" %>
           <% else %>
             <%= button_to "Sign in", new_user_session_path, class: "btn btn-light" %>
           <% end %>
