--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_pack_tag 'src/application', media: 'all' %>
+    <%= stylesheet_pack_tag 'bootstrap-src', media: 'all' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -17,6 +17,7 @@
     <div class='mx-10'>
       <%= yield %>
     </div>
+
     <%= render 'layouts/footer' %>
   </body>
 </html>
